School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/valid/emptyMain.deca
// Description:
//    Programme test un main vide
//
// Resultats:
//    1
//
// Historique:
//    cree le 22/12/2023

class A {
	int x;
}
