School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/invalid/OwnTests_stepB/invalid/tests_object/wrongExtends.deca
// Description:
//    Programme qui étend une classe qui n'existe pas
//
// Resultats:
//    1
//
// Historique:
//    cree le 22/12/2023

class A {
	int x;
	B b;
}

class B extends C {
	protected int y = 2;
}

{
    A a = new A();
    B b = new B();
}